--- a/.gitignore
+++ b/.gitignore
@@ -196,8 +196,11 @@ dmypy.json
 .pyre/
 
 # End of https://www.gitignore.io/api/python,pycharm
-input/
-output/
+input/*
+!input/keep_folder
+output/*
+!output/keep_folder
 
 .idea/
 hangouts-env/
+.DS_Store
